@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-13T08:12:26Z",
+  "timestamp" : "2024-05-13T16:12:00Z",
   "count_outdated" : 1257,
   "uniques_outdated" : 790,
-  "count" : 1270,
-  "uniques" : 802,
+  "count" : 1271,
+  "uniques" : 803,
   "clones" : [
     {
       "timestamp": "2024-05-04T00:00:00Z",
@@ -61,12 +61,12 @@
     },
     {
       "timestamp": "2024-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
