@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 3,
+  "count": 14,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2024-05-04T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2024-05-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
