@@ -1,3 +1,12 @@
+2024-05-13T16:12:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9066232564 # 269
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-13
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 790 1257 / 802 1270
+* notice: next accum: outdated-unq outdated-all / unq all: 790 1257 / 803 1271
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-05-13]
+
 2024-05-13T08:12:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9059490064 # 268
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-13
